versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/DecayPath.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalDecayPath
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function DecayPathDefaultConst() &
      bind(C, name='DecayPathDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function DecayPathDefaultConst

!! Create, default
function DecayPathDefault() &
      bind(C, name='DecayPathDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function DecayPathDefault

!! Create, general, const
function DecayPathCreateConst( &
   decay, decaySize &
) &
      bind(C, name='DecayPathCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: decaySize
   type(c_ptr) :: decay(decaySize)
   type(c_ptr) :: handle
end function DecayPathCreateConst

!! Create, general
function DecayPathCreate( &
   decay, decaySize &
) &
      bind(C, name='DecayPathCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), value :: decaySize
   type(c_ptr) :: decay(decaySize)
   type(c_ptr) :: handle
end function DecayPathCreate

!! Assign
subroutine DecayPathAssign(handleLHS, handleRHS) &
      bind(C, name='DecayPathAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine DecayPathAssign

!! Delete
subroutine DecayPathDelete(handle) &
      bind(C, name='DecayPathDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine DecayPathDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function DecayPathRead(handle, filename, filenameSize) &
      bind(C, name='DecayPathRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function DecayPathRead

!! Write to file
function DecayPathWrite(handle, filename, filenameSize) &
      bind(C, name='DecayPathWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function DecayPathWrite

!! Print to standard output, in our prettyprinting format
function DecayPathPrint(handle) &
      bind(C, name='DecayPathPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DecayPathPrint

!! Print to standard output, as XML
function DecayPathPrintXML(handle) &
      bind(C, name='DecayPathPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DecayPathPrintXML

!! Print to standard output, as JSON
function DecayPathPrintJSON(handle) &
      bind(C, name='DecayPathPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DecayPathPrintJSON


!! -----------------------------------------------------------------------------
!! Child: decay
!! -----------------------------------------------------------------------------

!! Has
function DecayPathDecayHas(handle) &
      bind(C, name='DecayPathDecayHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function DecayPathDecayHas

!! Clear
subroutine DecayPathDecayClear(handle) &
      bind(C, name='DecayPathDecayClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine DecayPathDecayClear

!! Size
function DecayPathDecaySize(handle) &
      bind(C, name='DecayPathDecaySize') &
      result(vectorSize)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: vectorSize
end function DecayPathDecaySize

!! Add
subroutine DecayPathDecayAdd(handle, fieldHandle) &
      bind(C, name='DecayPathDecayAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DecayPathDecayAdd

!! Get, by index \in [0,size), const
function DecayPathDecayGetConst(handle, index) &
      bind(C, name='DecayPathDecayGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetConst

!! Get, by index \in [0,size)
function DecayPathDecayGet(handle, index) &
      bind(C, name='DecayPathDecayGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: resultHandle
end function DecayPathDecayGet

!! Set, by index \in [0,size)
subroutine DecayPathDecaySet(handle, index, fieldHandle) &
      bind(C, name='DecayPathDecaySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DecayPathDecaySet

!! ------------------------
!! Re: metadatum index
!! ------------------------

!! Has, by index
function DecayPathDecayHasByIndex(handle, meta) &
      bind(C, name='DecayPathDecayHasByIndex') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   integer(c_int) :: has
end function DecayPathDecayHasByIndex

!! Get, by index, const
function DecayPathDecayGetByIndexConst(handle, meta) &
      bind(C, name='DecayPathDecayGetByIndexConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByIndexConst

!! Get, by index
function DecayPathDecayGetByIndex(handle, meta) &
      bind(C, name='DecayPathDecayGetByIndex') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByIndex

!! Set, by index
subroutine DecayPathDecaySetByIndex(handle, meta, fieldHandle) &
      bind(C, name='DecayPathDecaySetByIndex')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DecayPathDecaySetByIndex

!! ------------------------
!! Re: metadatum mode
!! ------------------------

!! Has, by mode
function DecayPathDecayHasByMode(handle, meta, metaSize) &
      bind(C, name='DecayPathDecayHasByMode') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: has
end function DecayPathDecayHasByMode

!! Get, by mode, const
function DecayPathDecayGetByModeConst(handle, meta, metaSize) &
      bind(C, name='DecayPathDecayGetByModeConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByModeConst

!! Get, by mode
function DecayPathDecayGetByMode(handle, meta, metaSize) &
      bind(C, name='DecayPathDecayGetByMode') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByMode

!! Set, by mode
subroutine DecayPathDecaySetByMode(handle, meta, metaSize, fieldHandle) &
      bind(C, name='DecayPathDecaySetByMode')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DecayPathDecaySetByMode

!! ------------------------
!! Re: metadatum complete
!! ------------------------

!! Has, by complete
function DecayPathDecayHasByComplete(handle, meta) &
      bind(C, name='DecayPathDecayHasByComplete') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   unknownType, value, intent(in) :: meta
   integer(c_int) :: has
end function DecayPathDecayHasByComplete

!! Get, by complete, const
function DecayPathDecayGetByCompleteConst(handle, meta) &
      bind(C, name='DecayPathDecayGetByCompleteConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   unknownType, value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByCompleteConst

!! Get, by complete
function DecayPathDecayGetByComplete(handle, meta) &
      bind(C, name='DecayPathDecayGetByComplete') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   unknownType, value, intent(in) :: meta
   type(c_ptr) :: resultHandle
end function DecayPathDecayGetByComplete

!! Set, by complete
subroutine DecayPathDecaySetByComplete(handle, meta, fieldHandle) &
      bind(C, name='DecayPathDecaySetByComplete')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   unknownType, value, intent(in) :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine DecayPathDecaySetByComplete


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalDecayPath
